// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense list with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ul
      className="list-body__items"
    >
      <ExpenseListItem
        amount={10000}
        createdAt={0}
        description="Game"
        id="1"
        key="1"
        note="Note"
      />
      <ExpenseListItem
        amount={100000}
        createdAt={-864000000}
        description="Rent"
        id="2"
        key="2"
        note="Note"
      />
      <ExpenseListItem
        amount={500}
        createdAt={345600000}
        description="Phone bill"
        id="3"
        key="3"
        note="Note"
      />
    </ul>
  </div>
</div>
`;

exports[`should render no expense found message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      No expenses found
    </div>
  </div>
</div>
`;
